<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light_background"
    android:padding="16dp"
    android:fillViewport="true"
    tools:context=".ui.fragment.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Manage, Explore, and Create!"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/white_card_background"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="4dp">

            <TextView
                android:id="@+id/organizersSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:padding="8dp"
                android:text="Organized Events"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


            <TextView
                android:id="@+id/eventCreateCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Total Events Created: 0"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/eventEntrantsCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:text="Total Event Entrants: 0"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/viewFacility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Create or manage your events!"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Button
                android:id="@+id/manageFacilityButton"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Manage Facility"
                app:icon="@drawable/baseline_holiday_village_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/white_card_background"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="4dp">

        <TextView
            android:id="@+id/entrantsSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Joined Events"
            android:textStyle="bold"
            android:padding="8dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/anEntrantCount"
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="wrap_content"
            android:text="Total Events Joined: 0"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/wonLotteryCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:padding="8dp"
                android:text="Total Event Lottery Wins: 0"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/scanCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Scan an event QR code to join an event!"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Button
                android:id="@+id/scan_qr_code_button"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Scan Event\nQR Code"
                app:icon="@drawable/baseline_qr_code_scanner_24" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/white_card_background"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:elevation="4dp">

            <TextView
                android:id="@+id/invitationsSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Invitations"
                android:textStyle="bold"
                android:padding="8dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/invitationsCount"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:layout_height="wrap_content"
                android:text="Pending Invitations: 0"
                android:textAlignment="textStart"
                android:layout_marginBottom="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/replyToday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="View and reply to your invitations!"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <Button
                android:id="@+id/view_invitations_button"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#3D5AFE"
                android:text="View Invitations"
                app:icon="@drawable/baseline_mark_email_unread_24" />

        </LinearLayout>



    </LinearLayout>

    </ScrollView>


