...
        <item
            android:id="@+id/nav_registered_events"
            android:icon="@drawable/baseline_event_24"
            android:title="@string/menu_registered_events" />

        <item
            android:id="@+id/nav_facility"
            android:icon="@drawable/baseline_holiday_village_24"
            android:title="@string/menu_facility" />

        <item
            android:id="@+id/nav_invitations"
            android:icon="@drawable/baseline_mark_email_unread_24"
...

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_image"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_admin_browse_images" />

        <item
            android:id="@+id/nav_browse_event"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_admin_browse_events" />

        <item
            android:id="@+id/nav_browse_profiles"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_admin_browse_profiles" />

        <item
            android:id="@+id/adminBrowseFacilitiesFragment"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_admin_browse_facilities" />
    </group>
</menu>
